<resources>
    <string name="app_name">NotificationScheduler</string>
    <string name="network_type_required">Network Type Required:</string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="wifi">Wifi</string>
    <string name="cancel_jobs">Cancel Jobs</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="override_deadline">Override Deadline:</string>
    <string name="not_set">Not set</string>
</resources>
